Fixed the header on IE9. Enabled hover-media-query.

--- a/theme/mindcrack/assets/stylesheets/_settings.scss
+++ b/theme/mindcrack/assets/stylesheets/_settings.scss
@@ -33,3 +33,5 @@ $pagination-border-color: $mc-blue-faint;
 $pagination-color: $mc-orange;
 
 $pagination-disabled-color: $mc-grey;
+
+$enable-hover-media-query: true;
